# mongodb-k8s-operator

./: .flake8  .gitignore  .jujuignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  actions.yaml  charmcraft.yaml  config.yaml  index.html  metadata.yaml  pyproject.toml  renovate.json  requirements.txt  run_tests  tox.ini
.github/: .jira_sync_config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  integration.yaml  lint.yaml  promote.yaml  python-package.yml  release.yaml  release_5.yaml  release_5_edge.yaml  release_6.yaml  sync_discourse.yaml  sync_docs.yaml  sync_issue_to_jira.yaml  unit.yaml
1962/: index.html
1962/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
1962/export/: influxDbData.txt  prometheusData.txt
1962/history/: categories-trend.json  history.json
1962/widgets/: duration-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
1980/: index.html
1980/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
1980/export/: influxDbData.txt  prometheusData.txt
1980/history/: history-trend.json  history.json
1980/widgets/: categories-trend.json  duration-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
2002/: index.html
2002/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
2002/export/: influxDbData.txt  prometheusData.txt
2002/history/: history-trend.json  history.json
2002/widgets/: categories-trend.json  duration-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
2003/: index.html
2003/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
2003/export/: influxDbData.txt  prometheusData.txt
2003/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
2003/widgets/: categories-trend.json  executors.json  severity.json  status-chart.json  suites.json  summary.json
2006/: index.html
2006/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
2006/export/: influxDbData.txt  prometheusData.txt
2006/history/: history-trend.json  history.json  retry-trend.json
2006/widgets/: categories-trend.json  duration-trend.json  executors.json  severity.json  status-chart.json  suites.json  summary.json
2019/: index.html
2019/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
2019/export/: influxDbData.txt  prometheusData.txt
2019/history/: categories-trend.json  duration-trend.json  history.json  retry-trend.json
2019/widgets/: executors.json  history-trend.json  severity.json  status-chart.json  suites.json  summary.json
2026/: index.html
2026/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
2026/export/: influxDbData.txt  prometheusData.txt
2026/history/: duration-trend.json  history.json  retry-trend.json
2026/widgets/: categories-trend.json  executors.json  history-trend.json  severity.json  status-chart.json  suites.json  summary.json
2030/: index.html
2030/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
2030/export/: influxDbData.txt  prometheusData.txt
2030/history/: categories-trend.json  history-trend.json  history.json
2030/widgets/: duration-trend.json  duration.json  executors.json  retry-trend.json  severity.json  suites.json  summary.json
2040/: index.html
2040/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
2040/export/: influxDbData.txt  prometheusData.txt
2040/history/: history.json
2040/widgets/: categories-trend.json  duration-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
2047/: index.html
2047/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
2047/export/: influxDbData.txt  prometheusData.txt
2047/history/: categories-trend.json  history.json
2047/widgets/: duration-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  (+1 more)
2048/: index.html
2053/: index.html
2061/: index.html
2074/: index.html
2101/: index.html
2103/: index.html
2122/: index.html
2123/: index.html
2124/: index.html
2143/: index.html
2194/: index.html
2198/: index.html
2209/: index.html
2228/: index.html
2229/: index.html
2231/: index.html
2243/: index.html
2258/: index.html
2281/: index.html
2285/: index.html
2291/: index.html
2292/: index.html
2293/: index.html
2296/: index.html
2306/: index.html
2309/: index.html
2312/: index.html
2315/: index.html
2316/: index.html
2317/: index.html
2330/: index.html
2348/: index.html
2357/: index.html
2421/: index.html
2429/: index.html
2434/: index.html
2438/: index.html
2443/: index.html
2444/: index.html
2456/: index.html
2465/: index.html
2477/: index.html
2481/: index.html
2483/: index.html
2484/: index.html
2493/: index.html
2514/: index.html
2533/: index.html
2536/: index.html
2566/: index.html
2567/: index.html
2570/: index.html
2589/: index.html
2616/: index.html
2634/: index.html
2666/: index.html
2692/: index.html
2693/: index.html
2694/: index.html
2742/: index.html
2749/: index.html
2767/: index.html
bundle/: bundle.yaml
docs/: index.md
src/: charm.py  cluster.py  config.py  exceptions.py  gen_cert.py  k8s_upgrade.py  literals.py  mongo.py  mongoprovider.py  mongoserver.py  pebble_layers.py  pod_spec.py  service_manager.py
templates/: logrotate.j2
tests/: conftest.py  test_charm.py  test_mongoprovider.py  test_mongoserver.py  test_pod_spec.py
(+17028 files in other folders)
