# Copyright 2023 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
name = "mongodb-k8s"
version = "0.0.1-dev.0"
description = ""
authors = [
    "Mykola Marzhan <mykola.marzhan@canonical.com>"
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://charmhub.io/mongodb-k8s?channel=6/edge"
repository = "https://github.com/canonical/mongodb-k8s-operator"

[tool.poetry.dependencies]
python = "^3.10.12"
ops = "^2.12.0"
pymongo = "^4.6.3"
tenacity = "^8.2.3"
cryptography = "^42.0.5"
jsonschema = "^4.21.1"
pyyaml = "^6.0.1"
cosl = "^0.0.11"

[tool.poetry.group.charm-libs.dependencies]
ops = "^2.12.0"
pydantic = "^1.10.7"
cryptography = "^42.0.5"
jsonschema = "^4.21.1"
cosl = "^0.0.11"
bcrypt = "^4.0.1"

[tool.poetry.group.format.dependencies]
black = "^24.4.0"
isort = "^5.13.2"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
flake8-copyright = "^0.2.4"
flake8-builtins = "^2.5.0"
pyproject-flake8 = "^7.0.0"
pep8-naming = "^0.13.3"
codespell = "^2.2.6"
shellcheck-py = "^0.10.0.1"
black = "^24.4.0"
isort = "^5.13.2"

[tool.poetry.group.unit.dependencies]
coverage = {extras = ["toml"], version = "^7.4.4"}
pytest = "^8.1.1"
parameterized = "^0.9.0"

[tool.poetry.group.integration.dependencies]
ops = "^2.12.0"
tenacity = "^8.2.3"
pymongo = "^4.6.3"
lightkube = "^0.15.2"
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
pytest-operator = "^0.34.0"
parameterized = "^0.9.0"
cryptography = "^42.0.5"
jsonschema = "^4.21.1"
cosl = "^0.0.11"
bcrypt = "^4.0.1"
juju = "3.4.0"
pytest-operator-cache = {git = "https://github.com/canonical/data-platform-workflows", tag = "v13.1.1", subdirectory = "python/pytest_plugins/pytest_operator_cache"}
pytest-operator-groups = {git = "https://github.com/canonical/data-platform-workflows", tag = "v13.1.1", subdirectory = "python/pytest_plugins/pytest_operator_groups"}
pytest-github-secrets = {git = "https://github.com/canonical/data-platform-workflows", tag = "v13.1.1", subdirectory = "python/pytest_plugins/github_secrets"}

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
markers = ["unstable"]

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
profile = "black"

# Linting tools configuration
[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 10
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv", "tests/integration/relation_tests/application-charm/lib/", "tests/integration/ha_tests/application_charm/lib/"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W503", "E501", "D107"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = ["tests/*:D100,D101,D102,D103,D104"]
docstring-convention = "google"
# Check for properly formatted copyright header in each file
copyright-check = "True"
copyright-author = "Canonical Ltd."
copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"
